--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="container">
         <h1>Student Todo List</h1>
         
-        <div class="input-section"
+        <div class="input-section">
             <input type="text" id="todoInput" placeholder="Enter a new task...">
             <button onclick="addTodo()">Add Task</button>
         </div>
